--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     },
     "autoload": {
         "psr-4": {
-            "dosamigos\\chartjs\\": "src"
+            "kazz3m\\chartjs\\": "src"
         }
     },
     "extra": {
